# VoiceTicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  License.md  eula.rtf
TicTacToe/: CMakeLists.txt
TicTacToe/src/: Board.h  VoiceTicTacToe.cpp  VoiceTicTacToe.h  main.cpp
TicTacToe/src/Application/: GameStack.cpp  GameStack.h  GlobalResources.cpp  GlobalResources.h  State.h
TicTacToe/src/Engine/: Engine.cpp  Engine.h  TicTacToe.cpp  TicTacToe.h
TicTacToe/src/GameStates/: MainMenu.cpp  MainMenu.h  PlayComputer.cpp  PlayComputer.h  PlayHuman.cpp  PlayHuman.h  SplashScreen.cpp  SplashScreen.h
TicTacToe/src/UI/: BoardDisplay.cpp  BoardDisplay.h  Button.cpp  Button.h  HeadLine.cpp  HeadLine.h  Panel.cpp  Panel.h  UIElement.h
TicTacToe/src/VoiceInput/: SpeechRecognizer.cpp  SpeechRecognizer.h  Transcriber.cpp  Transcriber.h
bin-int/: vc142.idb
bin-int/TicTacToe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TicTacToe.lastbuildstate  TicTacToe.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
dep/pocketsphinx/: CMakeLists.txt
dep/pocketsphinx/include/pocketsphinx/: pocketsphinx.h  ps_lattice.h  ps_mllr.h  ps_search.h
dep/pocketsphinx/source/: acmod.h  allphone_search.c  allphone_search.h  bin_mdef.c  bin_mdef.h  blkarray_list.h  dict.h  dict2pid.h  fsg_history.c  fsg_history.h  fsg_lextree.h  fsg_search.c  fsg_search_internal.h  hmm.h  kws_detections.h  kws_search.h  mdef.h  ms_gauden.h  ms_mgau.h  ms_senone.h  ngram_search.h  ngram_search_fwdflat.h  ngram_search_fwdtree.h  phone_loop_search.h  pocketsphinx.c  pocketsphinx_internal.h  ps_alignment.c  ps_alignment.h  ps_lattice.c  ps_lattice_internal.h  ptm_mgau.c  ptm_mgau.h  s2_semi_mgau.c  s2_semi_mgau.h  s3types.h  state_align_search.c  state_align_search.h  tied_mgau_common.h  tmat.h  vector.h
dep/sphinxbase/: CMakeLists.txt
dep/sphinxbase/include/sphinxbase/: ad.h  prim_type.h  sbthread.h  yin.h
dep/sphinxbase/source/libsphinxad/: ad_alsa.c  ad_pulse.c  ad_win32.c
dep/sphinxbase/source/lm/: lm_trie_quant.c
res/lang/: 8177.lm  8177.log_pronounce  8177.sent  8177.vocab  TAR8177.tgz  commands.dict  commands.kws  commands.txt
res/lang2/: 1074.dic  1074.lm  1074.log_pronounce  1074.vocab
